# HGamer3D

./: .gitignore  .travis.yml  CMakeLists.txt  DEPENDENCIES.txt  LICENSE.txt  README.md  build  build-mac  build.bat  dodo.py  robots.txt  versions.py
Audio/: HGamer3D-Audio.cabal  SConstruct
Audio/HGamer3D/: Audio.hs
Audio/HGamer3D/Audio/: AudioBase.hs  AudioListener.hs  AudioSource.hs  BaseAPI.hs  SystemAudio.hs
Audio/HGamer3D/Audio/Internal/: Base.hs
Audio/HGamer3D/Audio/Schema/: AudioListener.hs  (+1 more)
Audio/HGamer3D/BaseAPI/: Audio.hs
Audio/HGamer3D/Internal/: Audio.hs
Bindings/Enet/hBuild/: HGamer3D-Enet-Binding.cabal  SConstruct  Setup.hs
Bindings/SFML/hBuild/: HGamer3D-SFML-Binding.cabal  SConstruct
Common/: HGamer3D-Common.cabal  LICENSE  SConstruct
Common/HGamer3D/: Common.hs
Common/HGamer3D/Common/: ECS.hs  FileLocation.hs  UniqueName.hs
Data/: HGamer3D-Data.cabal  LICENSE  SConstruct
Data/HGamer3D/: Data.hs  Util.hs
Data/HGamer3D/Data/: Angle.hs  Colour.hs  GameTime.hs  Geometry2D.hs  HG3DClass.hs  Operation3D.hs  ScreenGeometry.hs  TimeMS.hs  Transform3D.hs  TypeSynonyms.hs  Vector.hs  Window.hs
Data/HGamer3D/Util/: FileLocation.hs
GUI/: HGamer3D-GUI.cabal  LICENSE  SConstruct  Setup.hs
GUI/HGamer3D/: GUI.hs
GUI/HGamer3D/GUI/: BaseAPI.hs
GUI/HGamer3D/Internal/: GUI.hs
Graphics3D/: HGamer3D-Graphics3D.cabal  SConstruct
Graphics3D/HGamer3D/: Graphics3D.hs
Graphics3D/HGamer3D/BaseAPI/: Graphics3D.hs
Graphics3D/HGamer3D/Graphics3D/: Base.hs  BaseAPI.hs  Basic3D.hs  Engine.hs  Event.hs  GUIBase.hs  GUISchema.hs  GameLoop.hs  Graphics3DBase.hs  Graphics3DSchema.hs  Light.hs  Object3D.hs  Parser.hs  PlatonObjects.hs  PlatonShapes.hs  Shapes.hs  SystemEvent.hs  SystemGraphics3D.hs  Types.hs  WinEvent.hs
Graphics3D/HGamer3D/Internal/: Graphics3D.hs
InputSystem/: HGamer3D-InputSystem.cabal  LICENSE  SConstruct
InputSystem/HGamer3D/: InputSystem.hs
InputSystem/HGamer3D/BaseAPI/: InputSystem.hs
InputSystem/HGamer3D/InputSystem/: BaseAPI.hs  Event.hs  InputSystemBase.hs  Joystick.hs  Mouse.hs  SystemInputSystem.hs
InputSystem/HGamer3D/Internal/: InputSystem.hs
Main/: HGamer3D.cabal  HGamer3D.hs  SConstruct
Main/HGamer3D/: BaseAPI.hs  EcsAPI.hs
Main/HGamer3D/Audio/: EcsAPI.hs
Main/HGamer3D/AudioModule/: BaseAPI.hs  EcsAPI.hs
Main/HGamer3D/Engine/: BaseAPI.hs  EcsAPI.hs
Main/HGamer3D/Extensions/: Schema.hs  Wire.hs
Main/HGamer3D/GUI/: EcsAPI.hs
Main/HGamer3D/Graphics3D/: EcsAPI.hs
Main/HGamer3D/InputSystem/: EcsAPI.hs
Main/HGamer3D/InputSystemModule/: BaseAPI.hs
Main/HGamer3D/Internal/: AudioModule.hs  Engine.hs  Event.hs  GameLoop.hs
Main/HGamer3D/Modules/: Audio.hs  InputSystem.hs  Network.hs
Main/HGamer3D/Network/: EcsAPI.hs
Main/HGamer3D/NetworkModule/: BaseAPI.hs
Module-API/: HGamer3D.cabal  Setup.hs
Module-API/HGamer3D/APIs/: Base.hs  FRP.hs
Module-Data/: HGamer3D-Data.cabal
Module-Data/HGamer3D/Data/: Angle.hs  Colour.hs  HG3DClass.hs  Vector.hs
Network/: HGamer3D-Network.cabal  SConstruct
Network/HGamer3D/: Network.hs
Network/HGamer3D/BaseAPI/: Network.hs
Network/HGamer3D/Internal/: Network.hs
Network/HGamer3D/Network/: BaseAPI.hs  NetworkBase.hs  Node.hs  PeerLookup.hs  SystemNetwork.hs
Schema/: HGamer3D-Schema.cabal  SConstruct
Schema/HGamer3D/Schema/: Camera.hs  Colour.hs  Geometry.hs  Light.hs  Material.hs  Node.hs  Parser.hs  Scene.hs  Texture.hs
Source/: CMakeLists.txt
Source/Haskell-Source/: CFunctions.chs  CMakeLists.txt  HGamer3D.cabal  interface.h  stack.yaml  uuid-map.txt
Source/Haskell-Source/HGamer3D/: Binding.hs  Graphics3D.hs  Input.hs  Util.hs
Source/Haskell-Source/Samples/: Cuboid2.hs  Gui1.hs  HGamer3D-SamplePackage.cabal  LiveStarter.hs  Materials.hs  RotatingCube.hs  SoundEffects.hs  engineShutdown.hs
Source/Runtime/: CMakeLists.txt  README_RUNTIME.txt
Source/Samples/: CMakeLists.txt  Materials.hs  RotatingCube.hs  engineShutdown.hs
Source/Urho3D-Binding/: CMakeLists.txt  audio.hpp  errors.hpp  graphics3d.cpp  graphics3d.hpp  gui.cpp  gui.hpp  input.cpp  input.hpp  interface.cpp  interface.h
WinEvent/: HGamer3D-WinEvent.cabal  SConstruct
WinEvent/HGamer3D/: WinEvent.hs
WinEvent/HGamer3D/Internal/: WinEvent.hs
WinEvent/HGamer3D/WinEvent/: BaseAPI.hs
Wire/: HGamer3D-Wire.cabal  SConstruct
Wire/HGamer3D/: Wire.hs
Wire/HGamer3D/Wire/: ECSWire.hs  EntityComponentSystem.hs  GUI.hs  Types.hs
examples/: Billion.hs  Cuboid2.hs  Gui1.hs  HGamer3D-Examples.cabal  LICENSE  Materials.hs  Mouse.hs  RotatingCube.hs  RotatingCube2.hs  SoundEffects.hs  SpaceInvaders.hs  TestDel.hs  engineShutdown.hs  stack.yaml
fresco/game-giornata/: CMakeLists.txt  Slider2.hpp  audio.cpp  graphics3d.cpp  gui.cpp  gui.hpp  input.cpp  input.hpp  interface.cpp  interface.h
gamegio-library/src/: CMakeLists.txt
gamegio-library/src/gamegio/: AlignmentCbor.cpp  AlignmentCbor.hpp  AngleCbor.cpp  AngleCbor.hpp  BlendModeCbor.cpp  BlendModeCbor.hpp  ButtonCbor.cpp  ButtonCbor.hpp  CMakeLists.txt  CameraCbor.cpp  CameraCbor.hpp  CameraItem.cpp  CameraItem.hpp  CheckBoxCbor.cpp  CheckBoxCbor.hpp  ColourCbor.cpp  ColourCbor.hpp  DropDownListCbor.cpp  DropDownListCbor.hpp  DropDownListItem.cpp  DropDownListItem.hpp  EditTextCbor.cpp  EditTextCbor.hpp  EntityIdCbor.cpp  EntityIdCbor.hpp  ExitRequestedItem.cpp  ExitRequestedItem.hpp  FontCbor.cpp  FontCbor.hpp  FontSizeCbor.cpp  FontSizeCbor.hpp  Fresco.cpp  Fresco.hpp  GUIElements.cpp  GUIElements.hpp  GeometryCbor.cpp  GeometryCbor.hpp  GeometryItem.cpp  GeometryItem.hpp  Graphics3DCommandCbor.cpp  (+112 more)
samples/: 01_HelloWorld.hs  02_HelloGUI.hs  Cuboid2.hs  Gui1.hs  Mouse.hs  SampleRunner.hs  Sample_01_RotatingCube.hs  Sample_02_Materials.hs  Sample_03_Hierarchy.hs  Sample_04_Sound.hs  Sample_05_MouseModes.hs  Sample_06_GUI.hs  Sample_07_Joystick.hs  Sample_08_SceneLoad.hs  Sample_09_Skybox.hs  Sample_10_3DText.hs  Sample_11_Particles.hs  Sample_12_AnimatedModel.hs  Sample_12_EventHandling.hs  Sample_13_EventHandling.hs  Samples.hs  SoundEffects.hs  SpaceInvaders.hs  TestDel.hs  build.bat  run.sh  samples.cabal  stack.yaml
(+1430 files in other folders)
