Name:                HGamer3D-Audio
Version:             0.4.0
Synopsis:            Audio Functionality for HGamer3D
Description:         
	HGamer3D is a game engine for developing 3D games in the programming 
	language Haskell. This package provides the Audio functionality, 
	based on the package HGamer3D-SFML-Binding. HGamer3D-Audio
	is available on Windows and Linux.
	
License:             OtherLicense
License-file:        LICENSE
Author:              Peter Althainz
Maintainer:          althainz@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.4
Homepage:            http://www.hgamer3d.org
Category:            Game Engine
Extra-source-files:  Setup.hs 

Library
  Build-Depends:     base >= 3 && < 5, containers, HGamer3D-Data >= 0.4.0 && < 0.5.0, HGamer3D-SFML-Binding >= 0.4.0 && < 0.5.0

  Exposed-modules:   HGamer3D.Audio.Schema.AudioSource, HGamer3D.Audio.Schema.AudioListener, HGamer3D.Audio.Internal.Base, HGamer3D.Audio.BaseAPI, HGamer3D.Internal.Audio
  Other-modules:     

  c-sources:         
  
  ghc-options:       
  cc-options:        -Wno-attributes 
  hs-source-dirs:    .
  Include-dirs:      . 
  build-depends:     
  extra-libraries:   
