Name:                HGamer3D-Data
Version:             0.5.0
Synopsis:            Toolset for the Haskell Game Programmer - Data Definitions
Description:         
	HGamer3D is a toolset for developing 3D games in the programming 
	language Haskell. HGamer3D is available on Windows and Linux. This 
	package provides common data definitions and utility functions for HGamer3D.
	Also in this package, the Entity Component System is placed.

License:             OtherLicense
License-file:        LICENSE
Author:              Peter Althainz
Maintainer:          althainz@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.4
Homepage:            http://www.hgamer3d.org
Category:            Game Engine
Extra-source-files:  Setup.hs 

Library
  Build-Depends:     base >= 3 && < 5, FindBin, directory, filepath, vect, clock, stm, containers

  Exposed-modules:   HGamer3D.Data.TypeSynonyms, HGamer3D.Data.Vector,HGamer3D.Data.Colour,HGamer3D.Data.HG3DClass,HGamer3D.Data.Angle,HGamer3D.Data.GameTime,HGamer3D.Data.Transform3D,HGamer3D.Data.Geometry2D,HGamer3D.Data.Window,HGamer3D.Data
  Other-modules:     

  c-sources:         
  
  ghc-options:       -O2
  cc-options:        -Wno-attributes 
  hs-source-dirs:    .
  Include-dirs:      . 
  build-depends:     
  extra-libraries:   
