Name:                HGamer3D-Graphics3D
Version:             0.5.0
Synopsis:            Toolset for the Haskell Game Programmer - 3D Graphics Functionality
Description:         
	HGamer3D is a toolset for developing 3D games in the programming 
	language Haskell. This package provides the 3D Graphics functionality
	based on the package HGamer3D-Ogre-Binding. HGamer3D-Graphics3D is
	available on Windows and Linux.

License:             OtherLicense
License-file:        LICENSE
Author:              Peter Althainz
Maintainer:          althainz@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.4
Homepage:            http://www.hgamer3d.org
Category:            Game Engine
Extra-source-files:  Setup.hs 

Library
  Build-Depends:     base >= 3 && < 5, containers, mtl, transformers, filepath, directory, split, HGamer3D-Data >= 0.5.0 && < 0.6.0, HGamer3D-Common >= 0.5.0 && < 0.6.0, HGamer3D-Ogre-Binding >= 0.5.0 && < 0.6.0, HGamer3D-SDL2-Binding >= 0.5.0 && < 0.6.0, HGamer3D-CEGUI-Binding >= 0.5.0 && < 0.6.0


  Exposed-modules:   HGamer3D.Graphics3D.Graphics3DBase, HGamer3D.Graphics3D.Graphics3DSchema, HGamer3D.Graphics3D.WinEvent, HGamer3D.Graphics3D.GUIBase, HGamer3D.Graphics3D.GUISchema, HGamer3D.Graphics3D.Event, HGamer3D.Graphics3D.GameLoop, HGamer3D.BaseAPI.Graphics3D, HGamer3D.Graphics3D.SystemGraphics3D, HGamer3D.Graphics3D

  Other-modules:     

  c-sources:         
  
  ghc-options:       -O2
  cc-options:        -Wno-attributes 
  hs-source-dirs:    .
  Include-dirs:      . 
  build-depends:     
  extra-libraries:   
