Name:                HGamer3D-InputSystem
Version:             0.5.0
Synopsis:            Joystick, Mouse and Keyboard Functionality for HGamer3D
Description:         
	HGamer3D is a toolset for developing 3D games in the programming 
	language Haskell. This package provides the Joystick, Mouse and Keyboard
	functionality, based on the packages HGamer3D-SFML-Binding and
	HGamer3D-SDL2-Binding. HGamer3D-InputSystem is available on 
	Windows and Linux.
	
License:             OtherLicense
License-file:        LICENSE
Author:              Peter Althainz
Maintainer:          althainz@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.4
Homepage:            http://www.hgamer3d.org
Category:            Game Engine
Extra-source-files:  Setup.hs 

Library
  Build-Depends:     base >= 3 && < 5, HGamer3D-Data >= 0.5.0 && < 0.6.0, HGamer3D-SFML-Binding >= 0.5.0 && < 0.6.0, HGamer3D-SDL2-Binding >= 0.5.0 && < 0.6.0, HGamer3D-Common >= 0.5.0 && < 0.6.0

  Exposed-modules:   HGamer3D.InputSystem.InputSystemBase, HGamer3D.BaseAPI.InputSystem, HGamer3D.InputSystem
  Other-modules:     

  c-sources:         
  
  ghc-options:       
  cc-options:        -Wno-attributes 
  hs-source-dirs:    .
  Include-dirs:      . 
  build-depends:     
  extra-libraries:   
