Name:                HGamer3D
Version:             0.4.0
Synopsis:            A Game Engine for the Haskell Programmer
Description:         
	HGamer3D is a game engine for developing 3D games in the programming 
	language Haskell. The game engine uses available libraries for 3D graphics, 
	sound, input device handling, gui programming and other areas and make
	those functions available for the Haskell programmer by providing  
	a Haskell API on top of that. HGamer3D is available on Windows and Linux.
	
License:             OtherLicense
License-file:        LICENSE
Author:              Peter Althainz
Maintainer:          althainz@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.4
Homepage:            http://www.hgamer3d.org
Category:            Game Engine
Extra-source-files:  Setup.hs 

Flag Audio
  Description: Enable Audio
  Default: True

Flag Network
  Description: Enable Network
  Default: True

Flag InputSystem
  Description: Enable Joystick, Mouse, Keyboard Polling
  Default: True

Library
  Build-Depends:     base >= 3 && < 5, ghc-prim, split, clock, containers, hashtables, hashable, HGamer3D-Data >= 0.4.0 && < 0.5.0, HGamer3D-Graphics3D >= 0.4.0 && < 0.5.0, HGamer3D-WinEvent >= 0.4.0 && < 0.5.0, HGamer3D-GUI >= 0.4.0 && < 0.5.0 

  Exposed-modules:   HGamer3D.Engine.Internal.Component, HGamer3D.Engine.Internal.ComponentType, HGamer3D.Engine.Internal.Entity, HGamer3D.Engine.Internal.System, HGamer3D.Engine.Internal.SystemGraphics3D, HGamer3D.Engine.Internal.SystemEvent, HGamer3D.Engine.Internal.GameLoop, HGamer3D.Engine.Internal.Event, HGamer3D.Engine.Schema.EventReceiver, HGamer3D.Engine.Schema.EventChannel, HGamer3D.Engine.EcsAPI, HGamer3D.Engine.BaseAPI, HGamer3D.Internal.Engine, HGamer3D.GUI.EcsAPI, HGamer3D.Graphics3D.EcsAPI

  Other-modules:     

  c-sources:         
  
  ghc-options:       
  cc-options:        -Wno-attributes 
  hs-source-dirs:    .
  Include-dirs:      . 
  build-depends:     
  extra-libraries:   

  if flag(audio)
    build-depends: HGamer3D-Audio >= 0.4 && < 0.5
    exposed-modules: HGamer3D.Audio.Internal.SystemAudio, HGamer3D.Audio.EcsAPI, HGamer3D.Internal.AudioModule

  if flag(network)
    build-depends: HGamer3D-Network >= 0.4 && < 0.5
--    exposed-modules: HGamer3D.Network.EcsAPI

  if flag(inputsystem)
    build-depends: HGamer3D-InputSystem >= 0.4 && < 0.5
--    exposed-modules: HGamer3D.InputSystem.EcsAPI

