Name:                HGamer3D
Version:             0.5.0
Synopsis:            A Toolset for the Haskell Game Programmer
Description:         
	HGamer3D is a toolset for developing 3D games in the programming 
	language Haskell. The game engine uses available libraries for 3D graphics, 
	sound, input device handling, gui programming and other areas and make
	those functions available for the Haskell programmer by providing  
	a Haskell API on top of that. HGamer3D is available on Windows and Linux.
	
License:             OtherLicense
License-file:        LICENSE
Author:              Peter Althainz
Maintainer:          althainz@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.4
Homepage:            http://www.hgamer3d.org
Category:            Game Engine
Extra-source-files:  Setup.hs 

Library
  Build-Depends:     base >= 3 && < 5, HGamer3D-Data >= 0.5.0 && < 0.6.0, HGamer3D-Common >= 0.5.0 && < 0.6.0, HGamer3D-Graphics3D >= 0.5.0 && < 0.6.0, HGamer3D-Audio >= 0.5.0 && < 0.6.0, HGamer3D-Network >= 0.5.0 && < 0.6.0, HGamer3D-InputSystem >= 0.5.0 && < 0.6.0
  Exposed-modules:   HGamer3D

  Other-modules:     

  c-sources:         
  
  ghc-options:       -O2
  cc-options:        -Wno-attributes 
  hs-source-dirs:    .
  Include-dirs:      . 
  build-depends:     
  extra-libraries:   
