Name:                HGamer3D-Data
Version:             0.2.0
Synopsis:            Windows Game Engine for the Haskell Programmer - Data Definitions
Description:         
	HGamer3D is a game engine for developing 3D games in the programming 
	language Haskell. The game engine uses available libraries for 3D graphics, 
	sound, input device handling, gui programming and other areas and make
	those functions available for the Haskell programmer by providing  
	a Haskell API on top of that. HGamer3D is available on Windows only.

License:             OtherLicense
License-file:        LICENSE
Author:              Peter Althainz
Maintainer:          althainz@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.4
Homepage:            http://www.hgamer3d.org
Category:            Game Engine
Extra-source-files:  Setup.hs 

Library
  Build-Depends:     base >= 3 && < 5, vect

  Exposed-modules:   HGamer3D.Data.Vector,HGamer3D.Data.Vector.Instances,HGamer3D.Data.Colour,HGamer3D.Data.HG3DClass,HGamer3D.Data.Angle
  Other-modules:     

  c-sources:         
  
  ghc-options:       
  cc-options:        -Wno-attributes 
  hs-source-dirs:    .
  Include-dirs:      . 
  build-depends:     
  extra-libraries:   
