Name:                HGamer3D-Schema
Version:             0.4.0
Synopsis:            Game Engine for the Haskell Programmer - Data Scheme Definitions
Description:         
	HGamer3D is a game engine for developing 3D games in the programming 
	language Haskell. HGamer3D is available on Windows and Linux. 

        This module provides functional data structures for all aspects of the framework, being really a "schema" for HGamer3D.

License:             OtherLicense
License-file:        LICENSE
Author:              Peter Althainz
Maintainer:          althainz@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.4
Homepage:            http://www.hgamer3d.org
Category:            Game Engine
Extra-source-files:  Setup.hs 

Library
  Build-Depends:     base >= 3 && < 5, containers, mtl, template-haskell, indents, parsec, lens, HGamer3D-Data >= 0.4.0 && < 0.5.0

  Exposed-modules:   HGamer3D.Schema.Scene, HGamer3D.Schema.Geometry, HGamer3D.Schema.Material, HGamer3D.Schema.Colour, HGamer3D.Schema.Texture, HGamer3D.Schema.Node, HGamer3D.Schema.Camera, HGamer3D.Schema.Light, HGamer3D.Schema.Parser

  Other-modules:     

  c-sources:         
  
  ghc-options:       
  cc-options:        -Wno-attributes 
  hs-source-dirs:    .
  Include-dirs:      . 
  build-depends:     
  extra-libraries:   
