Name:                HGamer3D-WinEvent
Version:             0.4.0
Synopsis:            Windowing and Event Functionality for HGamer3D
Description:         
	HGamer3D is a game engine for developing 3D games in the programming 
	language Haskell. This package provides the Windowing and Event
	functionality, based on the package HGamer3D-SDL2-Binding. 
	HGamer3D-WinEvent is available on Windows and Linux.
	
License:             OtherLicense
License-file:        LICENSE
Author:              Peter Althainz
Maintainer:          althainz@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.4
Homepage:            http://www.hgamer3d.org
Category:            Game Engine
Extra-source-files:  Setup.hs 

Library
  Build-Depends:     base >= 3 && < 5, text, HGamer3D-Data >= 0.4.0 && < 0.5.0, HGamer3D-SDL2-Binding >= 0.4.0 && < 0.5.0

  Exposed-modules:   HGamer3D.WinEvent.Internal.Base, HGamer3D.WinEvent.BaseAPI, HGamer3D.Internal.WinEvent
  Other-modules:     

  c-sources:         
  
  ghc-options:       
  cc-options:        -Wno-attributes 
  hs-source-dirs:    .
  Include-dirs:      . 
  build-depends:     
  extra-libraries:   
