Name:                HGamer3D-Examples
Version:             0.7.0
Synopsis:            Toolset for the Haskell Game Programmer
Description:         
	HGamer3D is a toolset for developing 3D games in the programming 
	language Haskell. This is the sample package.

License:             OtherLicense
License-file:        LICENSE
Author:              Peter Althainz
Maintainer:          althainz@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.4
Homepage:            http://www.hgamer3d.org
Category:            Game Engine
Extra-source-files:  Setup.hs 
 
Executable RotatingCube
  Build-Depends:     base >= 3 && < 5, HGamer3D, text
  Main-Is:          RotatingCube.hs
  ghc-options:		-threaded -rtsopts "-with-rtsopts=-N -A15M -qg -G3"

Executable Gui1
  Build-Depends:     base >= 3 && < 5, HGamer3D, text
  Main-Is:          Gui1.hs
  ghc-options:		-threaded -rtsopts "-with-rtsopts=-N -A15M -qg -G3"

Executable SoundEffects
  Build-Depends:     base >= 3 && < 5, HGamer3D, text
  Main-Is:          SoundEffects.hs
  ghc-options:		-threaded -rtsopts "-with-rtsopts=-N -A15M -qg -G3"

     
