name:                samples
version:             0.1.0.0
synopsis:            samples template
description:         Please see README.md
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable Billion
  hs-source-dirs:      .
  main-is:             Billion.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers, HGamer3D (>= 0.9.0 && < 2.0.0)
  default-language:    Haskell2010

executable Cuboid2
  hs-source-dirs:      .
  main-is:             Cuboid2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers, HGamer3D (>= 0.9.0 && < 2.0.0)
  default-language:    Haskell2010

executable Gui1
  hs-source-dirs:      .
  main-is:             Gui1.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers, HGamer3D (>= 0.9.0 && < 2.0.0)
  default-language:    Haskell2010

executable Materials
  hs-source-dirs:      .
  main-is:             Materials.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers, HGamer3D (>= 0.9.0 && < 2.0.0)
  default-language:    Haskell2010

executable Mouse
  hs-source-dirs:      .
  main-is:             Mouse.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers, HGamer3D (>= 0.9.0 && < 2.0.0)
  default-language:    Haskell2010

executable RotatingCube
  hs-source-dirs:      .
  main-is:             RotatingCube.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers, HGamer3D (>= 0.9.0 && < 2.0.0)
  default-language:    Haskell2010

executable RotatingCube2
  hs-source-dirs:      .
  main-is:             RotatingCube2.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers, HGamer3D (>= 0.9.0 && < 2.0.0)
  default-language:    Haskell2010

executable SoundEffects
  hs-source-dirs:      .
  main-is:             SoundEffects.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers, HGamer3D (>= 0.9.0 && < 2.0.0)
  default-language:    Haskell2010

executable SpaceInvaders
  hs-source-dirs:      .
  main-is:             SpaceInvaders.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers, HGamer3D (>= 0.9.0 && < 2.0.0)
  default-language:    Haskell2010

executable TestDel
  hs-source-dirs:      .
  main-is:             TestDel.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers, HGamer3D (>= 0.9.0 && < 2.0.0)
  default-language:    Haskell2010

executable 01_HelloWorld
  hs-source-dirs:      .
  main-is:             01_HelloWorld.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers, HGamer3D (>= 0.9.0 && < 2.0.0)
  default-language:    Haskell2010

