name:                samples
version:             0.1.0.0
synopsis:            samples template
description:         Please see README.md
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable Samples
  hs-source-dirs:      .
  main-is:             Samples.hs
  other-modules:       SampleRunner, Sample_01_RotatingCube, Sample_02_Materials, Sample_03_Hierarchy, Sample_04_Sound, Sample_05_MouseModes, Sample_06_GUI,
                       Sample_07_Joystick, Sample_08_SceneLoad, Sample_09_Skybox, Sample_10_3DText, Sample_11_Particles, Sample_12_AnimatedModel, Sample_13_EventHandling
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, containers, HGamer3D (>= 0.9.0 && < 2.0.0)
  default-language:    Haskell2010

